@@ -1,3 +1,7 @@
+2007-11-12  Ingmar Schlecht  <ingmar@typo3.org>
+
+	* Update checklist for things to do before a release: Update tsconfig_help data SQL file
+
 2007-06-08  Michael Stucki  <michael@typo3.org>
 
 	* Update checklist for things to do before a release: Get in touch with Rasmus Skjoldan for getting a new login image
